🐛 Fix : swegger 설정
* 🐛 Fix : swegger 설정